fix: finalize report validation updates
Agent-Logs-Url: https://github.com/MoisesNEY/ControlExpedientes/sessions/fb6b4fa4-a4fd-4105-9d6e-43429747d428

Co-authored-by: MoisesNEY <111917059+MoisesNEY@users.noreply.github.com>